crates/toml_edit/tests/snapshots/invalid/ext/table/duplicate-key-table-array-3.stderr
TOML parse error at line 2, column 3
  |
2 | [[a.b]]
  |   ^
cannot extend value of type array with a dotted key
